<resources>
    <string name="app_name">GURIHBINAR</string>
    <string name="teks_name">Hei abdurrohman</string>
    <string name="teks_hari">Hari ini makan apa</string>
    <string name="teks_diskon">Diskon 50%</string>
    <string name="teks_harga">Harga terjangkau</string>
    <string name="teks_harga_terjangkau">Harga terjangkau</string>
    <string name="teks_nasi">Nasi</string>
    <string name="teks_snack">Snack</string>
    <string name="teks_mie">Mie</string>
    <string name="teks_minuman">Minuman</string>
    <string name="teks_list_menu">List Menu</string>
    <string name="teks_ayam_bakar">Ayam Bakar</string>
    <string name="teks_rp_5000">Rp. 5000</string>
    <string name="teks_ayam_madu">Ayam Madu</string>
    <string name="teks_Rp_25_000">Rp. 25,000</string>
    <string name="teks_mietelur">MieTelur</string>
    <string name="teks_Rp_29_000">Rp. 29,000</string>
    <string name="teks_Rp_50_000">Rp. 50,000</string>
    <string name="teks_mie_naruto">Mie Naruto</string>
    <string name="img_desc">TODO</string>
    <string name="teks_todo1">TODO</string>
    <string name="img_desc_image">image</string>
    <string name="img_desc_mietelur">image</string>
</resources>