<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/backgroud_merah"
        android:contentDescription="@string/img_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/teks_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/teks_hari"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_name"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_pp1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/img_icon_propil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_keranjang1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/img_icon_keranjang"
            app:layout_constraintEnd_toStartOf="@id/iv_pp1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_poster"
        android:layout_width="411dp"
        android:layout_height="120dp"
        android:layout_marginTop="-100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_bg">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/backdsikon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/img_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/img_backgrouddiskon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/diskon_merah"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="15dp"
            android:text="@string/teks_diskon"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            android:accessibilityLiveRegion="polite"
            android:contentDescription="@string/teks_harga"
            android:importantForAccessibility="yes"
            android:text="@string/teks_harga_terjangkau"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal" />


    </com.google.android.material.card.MaterialCardView>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:columnCount="4"
        android:columnOrderPreserved="false"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_poster">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/nasi1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/img_icon_nasi" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teks_nasi"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <View
                android:layout_width="16dp"
                android:layout_height="1dp" /> <!-- Sesuaikan ukuran jarak di sini -->


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/nasi2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/img_icon_mie"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teks_mie"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <View
                android:layout_width="16dp"
                android:layout_height="1dp" /> <!-- Sesuaikan ukuran jarak di sini -->


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/nasi3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/img_icon_snack"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teks_snack"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <View
                android:layout_width="16dp"
                android:layout_height="1dp" /> <!-- Sesuaikan ukuran jarak di sini -->


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/nasi4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/img_icon_minuman" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teks_minuman"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </GridLayout>


    <TextView
        android:id="@+id/tv_list_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teks_list_menu"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />


    <ImageView
        android:id="@+id/iv_burger"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/img_desc_image"
        android:src="@drawable/icon_burger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_list_menu"
        tools:ignore="HardcodedText" />


    <ImageView
        android:id="@+id/iv_bakso"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/img_chiken_bakar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/teks_ayam_bakar"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bakso" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/teks_rp_5000"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bakso" />

    <ImageView
        android:id="@+id/iv_bakso2"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/img_menu_chiken_madu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="116dp"
        android:text="@string/teks_ayam_madu"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bakso2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="131sp"
        android:text="@string/teks_Rp_50_000"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bakso2" />


    <ImageView
        android:id="@+id/iv_mienaruto"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/img_menu_mienaruto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="336dp"
        android:text="@string/teks_mie_naruto"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mienaruto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="352dp"
        android:text="@string/teks_Rp_25_000"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mienaruto" />

    <ImageView
        android:id="@+id/iv_mietelur"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/img_menu_mietelur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_menu" />

    <TextView
        android:layout_width="58dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="132dp"
        android:text="@string/teks_mietelur"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mietelur"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="132dp"
        android:text="@string/teks_Rp_29_000"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mietelur" />


</androidx.constraintlayout.widget.ConstraintLayout>
